package classes;

public abstract class Emotion {
    public abstract String express();
}
