package classes;

import java.util.Objects;

public class Room {
    private String name;

    public Room(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    @Override
    public boolean equals(Object object) {
        if (this == object) return true;
        if (object == null || getClass() != object.getClass()) return false;
        Room room = (Room) object;
        return Objects.equals(name, room.name);
    }

    @Override
    public int hashCode() {
        return 31 * Objects.hash(name);
    }

    @Override
    public String toString() {
        return "classes.Room{" +
                "name='" + name + '\'' +
                '}';
    }
}
