package interfaces;

public interface Headdress {
    String getType();
}
