package interfaces;

public interface HeaddressOwner {
    void takeOff(Headdress headdress);

}
