package interfaces;

import classes.StorageItem;

public interface StorageOwner {
    void takeOut(StorageItem[] storageItems);
}
