package interfaces;

public interface Thankable {
    String getThankedName();
}

